@@ -1,5 +1,11 @@
 CMF 2.1.0-beta (unreleased)
 
+  New Features
+
+    - Merged patches from Martin Aspeli to enable generating events before
+      and after DCWorkflow transitions, and in the 'notify' methods of the
+      workflow tool (http://www.zope.org/Collectors/CMF/461).
+
   Bug Fixes
 
     - CMFDefault.File and CMFDefault.Image: Restored ZMI Cache tab which was
